# rust_app

./: LICENSE
actix_api/: .env  Cargo.toml
actix_api/src/: actors.rs  db_models.rs  db_utils.rs  insertables.rs  main.rs  messages.rs  schema.rs  services.rs
yew_ui/: Cargo.toml
yew_ui/src/: main.rs  router.rs
yew_ui/src/components/: mod.rs  number_input.rs  text_input.rs
yew_ui/src/pages/: actualizar_conductora.rs  agregar_conductora.rs  eliminar_conductora.rs  inicio.rs  mod.rs
