[package]
name = "yew_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.3.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json"] }
route-recognizer = "0.3.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.64", features = ["HtmlInputElement", "History"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
